test/dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: n8n-test
  namespace: gateway-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: n8n-test
  template:
    metadata:
      labels:
        app: n8n-test
    spec:
      containers:
        - name: n8n
          image: n8nio/n8n:latest
          ports:
            - containerPort: 5678
          env:
            - name: N8N_BASIC_AUTH_ACTIVE
              value: "false"
            - name: N8N_DIAGNOSTICS_ENABLED
              value: "false"
            - name: N8N_HIRING_BANNER_ENABLED
              value: "false"
