test/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: n8n-test
  namespace: gateway-system
spec:
  selector:
    app: n8n-test
  ports:
    - name: http
      port: 80
      targetPort: 5678
  type: ClusterIP
